fix z-index for secondary nav

--- a/css/design-style.css
+++ b/css/design-style.css
@@ -787,7 +787,7 @@ ul.social-icons a.googleplus{
 
 .main-menu-bottom {
 	background-color: #000000;
-	margin-bottom: 0 !important;  z-index: 1;
+	margin-bottom: 0 !important;  z-index: 10;
 	position: relative;
 }
 .main-menu-bottom ul#top-nav li a {
